[package]
name = "embedded-drivers"
version = "0.0.2"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal-driver"]
description = "Platform-agnostic Rust drivers for BME280/BMP280/BMP180, LM75, PMS7003 sensors"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std", "embedded-hal"]
repository = "https://github.com/andelf/embedded-drivers"
homepage = "https://github.com/andelf/embedded-drivers"

[dependencies]
nb = "1"
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-hal = { version = "1.0.0-alpha.10" }
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
defmt = { version = "0.3", optional = true }
embedded-graphics-framebuf = "0.2.0"
